Fixed bug with overlaying image on Launch Weather app button on mobile

--- a/styles.css
+++ b/styles.css
@@ -22,6 +22,7 @@ h1 {
 
 h2 {
   font-size: 48px;
+  text-align: left;
 }
 
 h3 {
@@ -75,6 +76,7 @@ p {
 
 .about-paragraphs p {
   margin: 10px;
+  text-align: left;
 }
 
 .email-link {
@@ -96,27 +98,4 @@ p {
   text-decoration: none;
   padding: 20px;
   border-radius: 4px;
-}
-
-@media (min-width: 375px) {
-  h1 {
-    font-size: 32px;
-    margin: 20px;
-  }
-  h2 {
-    font-size: 22px;
-    text-align: center;
-  }
-  h3 {
-    font-size: 18px;
-  }
-  p {
-    text-align: center;
-  }
-  img {
-    display: none;
-  }
-  .email-link {
-    font-size: 18px;
-  }
 }
